php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44233 MSG_PEEK undefined under BeOS R5
Submitted: 2008-02-24 07:42 UTC Modified: 2008-02-27 00:32 UTC
From: jonathonfreeman at gmail dot com Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.2.5 OS: BeOS R5
Private report: No CVE-ID: None
 [2008-02-24 07:42 UTC] jonathonfreeman at gmail dot com
Description:
------------
Build fails under BeOS R5 in /main/streams/xp_socket.c:280 -- MSG_PEEK undeclared.

According to BeOS docs, flags passed to socket functions should always be 0. I added this, and PHP built successfully:

/* BeOS does not have MSG_PEEK.  */
#ifndef MSG_PEEK
#define MSG_PEEK 0
#endif

Reproduce code:
---------------
Build under BeOS R5.

Expected result:
----------------
Successfully build PHP.

Actual result:
--------------
Build fails.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-02-27 00:32 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC