Fixed bug #44233 (MSG_PEEK undefined under BeOS R5)